Laddade upp all kod
Tidigare hade jag skrivit i visual studio, nu laddar jag upp all kod

--- a/index.html
+++ b/index.html
@@ -1,1 +1,51 @@
-<!--todo-->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Välkommen till Härmanö</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&display=swap" rel="stylesheet">
+</head>
+<body>
+    <div id="grid_wrapper">
+        <header id="rubrik">
+            <h1>Välkommen till Härmanö</h1>
+            <div id="linje"></div>
+        </header>
+        <nav>
+
+            <ul id="nav-links" > <!---style-koden är kopierad från internet--->
+                <li><a href="index.html">Hem</a></li>
+                <li><a href="index_boende.html">Boende</a></li>
+                <li><a href="#">Att göra</a></li>
+                <li><a href="#">Galleri</a></li>
+            </ul>
+
+            <div id="burger">
+                <div id="line_1" class="burger_line"></div>
+                <div id="line_2" class="burger_line"></div>
+                <div id="line_3" class="burger_line"></div>
+            </div>
+        </nav>
+        <div id="img-parent">
+            <img src="img/ivan-vashchenko-tUuvYMkd0vQ-unsplash.jpg" alt="Bild på Härmanö" id="image">
+        </div>
+        
+        <article>
+                <h2>
+                    Sommarens äventyr börjar här!
+                </h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur ratione laborum unde, rem itaque perspiciatis. Dolores aliquid fuga eum. Similique, aliquid fugiat atque incidunt expedita sint ea beatae explicabo dolor!
+                    <br>
+                    <br>Lorem ipsum dolor sit amet consectetur adipisicing elit. A quam, voluptatibus nobis dolorem saepe officiis aliquam repudiandae, ipsum ducimus nam voluptatem. Laboriosam, veritatis quae eveniet expedita nesciunt corporis odit labore non voluptatibus voluptatum autem eaque blanditiis esse. Praesentium architecto repudiandae neque fuga dolores quae dolorum quas quos repellat! Culpa, id!
+                </p>
+        </article>
+
+    </div>
+    <script src="js/script.js"></script>
+</body>
+</html>
