Började på boendesidan
Fixade till en grundläggande layout för boendesidan

--- a/index_boende.html
+++ b/index_boende.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div id="grid-wrapper_boende">
+    <div id="grid_wrapper_boende">
         <header id="rubrik">
             <h1>Bo på Härmanö</h1>
             <div id="linje"></div>
@@ -29,6 +29,30 @@
                 <div id="line_3" class="burger_line"></div>
             </div>
         </nav>
+
+        <div id="Harmanovagen">
+            <h2 id="rubrik_harm">
+                Bo på Härmanövägen
+            </h2>
+            <img src="img/IMG-20220305-WA0000.jpg" alt="Bild på Härmanövägen" id="bild_på_harmanovagen">
+            <p id="desc_harm">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit totam alias dolor accusamus culpa nobis, dicta consequatur iste corrupti doloremque iure perspiciatis molestias repellendus quasi quae nesciunt eum non aut recusandae asperiores vel rem ipsa. Repellendus porro ad id unde deleniti rerum iusto, at non numquam cumque, voluptate ipsum! Quae.
+            </p>
+            <a href="#" id="booking_button_harm">Boka här</a>
+        </div>
+
+        <div id="oskargatan">
+            <h2 id="rubrik_osk">
+                Bo på Oskargatan
+            </h2>
+            <img src="img/IMG-20220305-WA0000.jpg" alt="Bild på Härmanövägen" id="bild_på_harmanovagen">
+            <p id="desc_osk">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit totam alias dolor accusamus culpa nobis, dicta consequatur iste corrupti doloremque iure perspiciatis molestias repellendus quasi quae nesciunt eum non aut recusandae asperiores vel rem ipsa. Repellendus porro ad id unde deleniti rerum iusto, at non numquam cumque, voluptate ipsum! Quae.
+            </p>
+            <a href="#" id="booking_button_osk">
+                <p>Boka här</p>
+            </a>
+        </div>
 
     </div>
     <script src="js/script.js"></script>
