--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
         </nav>
         <div id="img-parent">
-            <img src="img/ivan-vashchenko-tUuvYMkd0vQ-unsplash.jpg" alt="Bild på Härmanö" id="image">
+            <img src="img/IMG-20220305-WA0000.jpg" alt="Bild på Härmanö" id="image">
         </div>
         
         <article>
