fixade problemet med hamburgarmenyn(tack leo :))

--- a/index_boende.html
+++ b/index_boende.html
@@ -11,12 +11,11 @@
     <div id="grid_wrapper_boende">
         <header id="rubrik">
             <h1>Bo på Härmanö</h1>
-            <div id="linje"></div>
         </header>
 
         <nav>
 
-            <ul id="nav-links" > <!---style-koden är kopierad från internet--->
+            <ul id="nav-links" > 
                 <li><a href="index.html">Hem</a></li>
                 <li><a href="#">Boende</a></li>
                 <li><a href="#">Att göra</a></li>
@@ -27,6 +26,7 @@
                 <div id="line_1" class="burger_line"></div>
                 <div id="line_2" class="burger_line"></div>
                 <div id="line_3" class="burger_line"></div>
+                <div id="linje"></div>
             </div>
         </nav>
 
