Fixade massa små saker. Började på desktop-versionen av beondesidan

--- a/index.html
+++ b/index.html
@@ -26,9 +26,12 @@
             </ul>
 
             <div id="burger">
+                <div id="burger_button">
                 <div id="line_1" class="burger_line"></div>
                 <div id="line_2" class="burger_line"></div>
                 <div id="line_3" class="burger_line"></div>
+                </div>
+                <div id="linje"></div>
             </div>
         </nav>
         <div id="img-parent">
