Fixade lite med boende sidan

--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
             </div>
         </nav>
         <div id="img-parent">
-            <img src="img/IMG-20220305-WA0000.jpg" alt="Bild på Härmanö" id="image">
+            <img src="img/IMG-20220305-WA0000.jpg" alt="Bild på Härmanö" id="image_start">
         </div>
         
-        <article>
+        <article id="article_start">
                 <h2>
                     Sommarens äventyr börjar här!
                 </h2>
