--- a/index_boende.html
+++ b/index_boende.html
@@ -30,6 +30,12 @@
             </div>
         </nav>
 
+        <article id="article_boende">
+            <p id="article_boende_text">
+                Här på härmanö kan man bo på två olika ställen Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta neque, repellat aut non saepe at sed possimus totam dolores, odit illum voluptate! Repellendus ea fugiat facere aspernatur omnis et laboriosam, esse quibusdam eos ratione! Ipsam.    
+            </p>
+        </article>
+
         <div id="Harmanovagen">
             <h2 id="rubrik_harm">
                 Bo på Härmanövägen
@@ -53,6 +59,8 @@
                 <p>Boka här</p>
             </a>
         </div>
+
+        <div id="linje2"></div>
 
     </div>
     <script src="js/script.js"></script>
