Ändrade layouten på desktopversionen av boendesidan. Inte helt klar!

--- a/index_boende.html
+++ b/index_boende.html
@@ -40,24 +40,30 @@
             <h2 id="rubrik_harm">
                 Bo på Härmanövägen
             </h2>
-            <img src="img/IMG-20220305-WA0000.jpg" alt="Bild på Härmanövägen" id="bild_på_harmanovagen">
-            <p id="desc_harm">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit totam alias dolor accusamus culpa nobis, dicta consequatur iste corrupti doloremque iure perspiciatis molestias repellendus quasi quae nesciunt eum non aut recusandae asperiores vel rem ipsa. Repellendus porro ad id unde deleniti rerum iusto, at non numquam cumque, voluptate ipsum! Quae.
-            </p>
-            <a href="#" id="booking_button_harm">Boka här</a>
+            <div id="art_harm">
+                <img src="img/IMG-20220305-WA0000.jpg" alt="Bild på Härmanövägen" id="bild_pa_harmanovagen">
+                <p id="desc_harm">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit totam alias dolor accusamus culpa nobis, dicta consequatur iste corrupti doloremque iure perspiciatis molestias repellendus quasi quae nesciunt eum non aut recusandae asperiores vel rem ipsa. Repellendus porro ad id unde deleniti rerum iusto, at non numquam cumque, voluptate ipsum! Quae.
+                </p>
+                <a href="#" id="booking_button_harm">Boka här</a>
+            </div>
         </div>
 
         <div id="oskargatan">
             <h2 id="rubrik_osk">
                 Bo på Oskargatan
             </h2>
-            <img src="img/IMG-20220305-WA0000.jpg" alt="Bild på Härmanövägen" id="bild_på_harmanovagen">
-            <p id="desc_osk">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit totam alias dolor accusamus culpa nobis, dicta consequatur iste corrupti doloremque iure perspiciatis molestias repellendus quasi quae nesciunt eum non aut recusandae asperiores vel rem ipsa. Repellendus porro ad id unde deleniti rerum iusto, at non numquam cumque, voluptate ipsum! Quae.
-            </p>
-            <a href="#" id="booking_button_osk">
-                <p>Boka här</p>
-            </a>
+            <img src="img/IMG-20220305-WA0000.jpg" alt="Bild på Härmanövägen" id="bild_pa_oskargatan">
+            
+            <div id="art_oskar">
+                <p id="desc_osk">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit totam alias dolor accusamus culpa nobis, dicta consequatur iste corrupti doloremque iure perspiciatis molestias repellendus quasi quae nesciunt eum non aut recusandae asperiores vel rem ipsa. Repellendus porro ad id unde deleniti rerum iusto, at non numquam cumque, voluptate ipsum! Quae.
+                </p>
+                <a href="#" id="booking_button_osk">
+                    <p>Boka här</p>
+                </a>
+            </div>
+
         </div>
 
 
