--- a/index_boende.html
+++ b/index_boende.html
@@ -40,8 +40,8 @@
             <h2 id="rubrik_harm">
                 Bo på Härmanövägen
             </h2>
+            <img src="img/IMG-20220305-WA0000.jpg" alt="Bild på Härmanövägen" id="bild_pa_harmanovagen">
             <div id="art_harm">
-                <img src="img/IMG-20220305-WA0000.jpg" alt="Bild på Härmanövägen" id="bild_pa_harmanovagen">
                 <p id="desc_harm">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit totam alias dolor accusamus culpa nobis, dicta consequatur iste corrupti doloremque iure perspiciatis molestias repellendus quasi quae nesciunt eum non aut recusandae asperiores vel rem ipsa. Repellendus porro ad id unde deleniti rerum iusto, at non numquam cumque, voluptate ipsum! Quae.
                 </p>
@@ -56,9 +56,8 @@
             <img src="img/IMG-20220305-WA0000.jpg" alt="Bild på Härmanövägen" id="bild_pa_oskargatan">
             
             <div id="art_oskar">
-                <p id="desc_osk">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit totam alias dolor accusamus culpa nobis, dicta consequatur iste corrupti doloremque iure perspiciatis molestias repellendus quasi quae nesciunt eum non aut recusandae asperiores vel rem ipsa. Repellendus porro ad id unde deleniti rerum iusto, at non numquam cumque, voluptate ipsum! Quae.
-                </p>
+                <p id="desc_osk">   
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit totam alias dolor accusamus culpa nobis, dicta consequatur iste corrupti doloremque iure perspiciatis molestias repellendus quasi quae nesciunt eum non aut recusandae asperiores vel rem ipsa. Repellendus porro ad id unde deleniti rerum iusto, at non numquam cumque, voluptate ipsum! Quae.                </p>
                 <a href="#" id="booking_button_osk">
                     <p>Boka här</p>
                 </a>
