--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <ul id="nav-links" > <!---style-koden är kopierad från internet--->
                 <li><a href="index.html">Hem</a></li>
                 <li><a href="index_boende.html">Boende</a></li>
-                <li><a href="#">Att göra</a></li>
+                <li><a href="index_att_gora.html">Att göra</a></li>
                 <li><a href="#">Galleri</a></li>
             </ul>
 
