--- a/index_boende.html
+++ b/index_boende.html
@@ -17,8 +17,8 @@
 
             <ul id="nav-links" > 
                 <li><a href="index.html">Hem</a></li>
-                <li><a href="#">Boende</a></li>
-                <li><a href="#">Att göra</a></li>
+                <li><a href="index_boende.html">Boende</a></li>
+                <li><a href="index_att_gora.html">Att göra</a></li>
                 <li><a href="#">Galleri</a></li>
             </ul>
 
