Jobbade på att göra-sidan+lite andra småfixar
Började koda på att göra sida och fixade lite annat också

--- a/index_att_gora.html
+++ b/index_att_gora.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Boende på Härmanö</title>
+    <title>Att göra på Härmanö</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div id="grid_wrapper_att_gora">    
         <header id="rubrik">
-            <h1>Bo på Härmanö</h1>
+            <h1>Att göra</h1>
         </header>
 
         <nav>
@@ -26,9 +26,14 @@
                 <div id="line_1" class="burger_line"></div>
                 <div id="line_2" class="burger_line"></div>
                 <div id="line_3" class="burger_line"></div>
-                <div id="linje"></div>
             </div>
         </nav>
+        <div id="activities">
+            <a href="#" id="besok_gullh">
+                <img src="img/harmano_2.jpg" alt="Bild på Gullholmen" id="bild_pa_gullh">
+                <div id="besok_gullh_text">Besök Gullholmen</div>
+            </a>
+        </div>
 
 
     </div>
