--- a/index_att_gora.html
+++ b/index_att_gora.html
@@ -31,8 +31,28 @@
         <div id="activities">
             <a href="#" id="besok_gullh">
                 <img src="img/harmano_2.jpg" alt="Bild på Gullholmen" id="bild_pa_gullh">
-                <div id="besok_gullh_text">Besök Gullholmen</div>
+                <div id="besok_gullh_text">
+                    <h2>Besök Gullholmen</h2>
+                    <p>Sveriges charmigaste holme</p>
+                </div> 
             </a>
+
+            <a href="#" id="vandra_pa_harm">
+                <img src="img/harmano_2.jpg" alt="Bild på vandring" id="bild_pa_vandring">
+                <div id="vandra_pa_harm_text">
+                    <h2>Vandra på Härmanö</h2>
+                    <p>Njut av natursköna leder</p>
+                </div> 
+            </a>
+
+            <a href="#" id="upptack">
+                <img src="img/harmano_2.jpg" alt="Bild på museum" id="bild_pa_museum">
+                <div id="upptack_pa_harm_text">
+                    <h2>Upptäck</h2>
+                    <p>Härmanös underliga historia</p>
+                </div> 
+            </a>
+
         </div>
 
 
