Höll på lite med att göra-sidan

--- a/index_att_gora.html
+++ b/index_att_gora.html
@@ -49,7 +49,7 @@
                 <img src="img/harmano_2.jpg" alt="Bild på museum" id="bild_pa_museum">
                 <div id="upptack_pa_harm_text">
                     <h2>Upptäck</h2>
-                    <p>Härmanös underliga historia</p>
+                    <p>Härmanös spännande historia</p>
                 </div> 
             </a>
 
