--- a/index_boende.html
+++ b/index_boende.html
@@ -19,7 +19,7 @@
                 <li><a href="index.html">Hem</a></li>
                 <li><a href="index_boende.html">Boende</a></li>
                 <li><a href="index_att_gora.html">Att göra</a></li>
-                <li><a href="#">Galleri</a></li>
+                <li><a href="galleri.html">Galleri</a></li>
             </ul>
 
             <div id="burger">
