Gjorde mobilversionen för galleri-sidan

--- a/galleri.html
+++ b/galleri.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Att göra på Härmanö</title>
+    <title>Galleri</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div id="grid_wrapper_att_gora">    
+    <div id="grid_wrapper_galleri">    
         <header id="rubrik">
-            <h1>Att göra</h1>
+            <h1>Galleri</h1>
         </header>
 
         <nav>
@@ -29,7 +29,42 @@
             </div>
         </nav>
 
+        <div id="fotografer_och_bilder">
+            
+                <img src="img/harmano_2.jpg" alt="En fin bild på Härmanö" id="static_img1">
+    
+            <div id="fotografer">
+                <h2>Tack till</h2>
+                <ul>
+                    <li>
+                        <p>Namn Namnsson</p>
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <p>Namn Namnsson</p>
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <p>Namn Namnsson</p>
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <p>Namn Namnsson</p>
+                    </li>
+                </ul>
+            </div>
+        </div>
 
+        <img src="img/harmano_2.jpg" alt="En till fin bild på Härmanö" id="static_image2" >
+
+
+        <div id="slideshow_container">
+            <img src="img/harmano_2.jpg" alt="Första bilden i bildspelet" class="slideshow">
+            <img src="img/IMG-20220305-WA0000.jpg" alt="Första bilden i bildspelet" class="slideshow">
+        </div>
 
     </div>
     <script src="js/script.js"></script>
