Gjorde lite på gallerisidan

--- a/galleri.html
+++ b/galleri.html
@@ -37,28 +37,29 @@
                 <h2>Tack till</h2>
                 <ul>
                     <li>
-                        <p>Namn Namnsson</p>
+                        <p>JoelDinBoel</p>
                     </li>
                 </ul>
                 <ul>
                     <li>
-                        <p>Namn Namnsson</p>
+                        <p>Oskarzzz</p>
                     </li>
                 </ul>
                 <ul>
                     <li>
-                        <p>Namn Namnsson</p>
+                        <p> Luckaks</p>
                     </li>
                 </ul>
                 <ul>
                     <li>
-                        <p>Namn Namnsson</p>
+                        <p> Inte gustav</p>
                     </li>
                 </ul>
             </div>
         </div>
-
-        <img src="img/harmano_2.jpg" alt="En till fin bild på Härmanö" id="static_image2" >
+        <div id="static_img2_parent">
+            <img src="img/harmano_2.jpg" alt="En till fin bild på Härmanö" id="static_image2" >
+        </div>
 
 
         <div id="slideshow_container">
