--- a/galleri.html
+++ b/galleri.html
@@ -34,7 +34,7 @@
                 <img src="img/harmano_2.jpg" alt="En fin bild på Härmanö" id="static_img1">
     
             <div id="fotografer">
-                <h2>Tack till</h2>
+                <h2>Fotografer</h2>
                 <ul>
                     <li>
                         <p>JoelDinBoel</p>
