Gjorde klart gallerisidan

--- a/galleri.html
+++ b/galleri.html
@@ -33,7 +33,7 @@
             
                 <img src="img/harmano_2.jpg" alt="En fin bild på Härmanö" id="static_img1">
     
-            <div id="fotografer">
+            <div id="fotografer">   
                 <h2>Fotografer</h2>
                 <ul>
                     <li>
@@ -52,7 +52,7 @@
                 </ul>
                 <ul>
                     <li>
-                        <p> Inte gustav</p>
+                        <p> Inte Gustav</p>
                     </li>
                 </ul>
             </div>
