--- a/index_boende.html
+++ b/index_boende.html
@@ -29,11 +29,6 @@
             </div>
         </nav>
 
-        <article id="article_boende">
-            <p id="article_boende_text">
-                Här på härmanö kan man bo på två olika ställen Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta neque, repellat aut non saepe at sed possimus totam dolores, odit illum voluptate! Repellendus ea fugiat facere aspernatur omnis et laboriosam, esse quibusdam eos ratione! Ipsam.    
-            </p>
-        </article>
 
         <div id="Harmanovagen">
             <h2 id="rubrik_harm">
@@ -42,7 +37,10 @@
             <img src="img/IMG-20220305-WA0000.jpg" alt="Bild på Härmanövägen" id="bild_pa_harmanovagen">
             <div id="art_harm">
                 <p id="desc_harm">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit totam alias dolor accusamus culpa nobis, dicta consequatur iste corrupti doloremque iure perspiciatis molestias repellendus quasi quae nesciunt eum non aut recusandae asperiores vel rem ipsa. Repellendus porro ad id unde deleniti rerum iusto, at non numquam cumque, voluptate ipsum! Quae.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit totam alias dolor accusamus culpa nobis, dicta consequatur iste. 
+                    <br>
+                    <br>
+                    Corrupti doloremque iure perspiciatis molestias repellendus quasi quae nesciunt eum non aut recusandae asperiores vel rem ipsa. Repellendus porro ad id unde deleniti rerum iusto, at non numquam cumque, voluptate ipsum! Quae.
                 </p>
                 <a href="#" id="booking_button_harm">Boka här</a>
             </div>
@@ -56,7 +54,11 @@
             
             <div id="art_oskar">
                 <p id="desc_osk">   
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit totam alias dolor accusamus culpa nobis, dicta consequatur iste corrupti doloremque iure perspiciatis molestias repellendus quasi quae nesciunt eum non aut recusandae asperiores vel rem ipsa. Repellendus porro ad id unde deleniti rerum iusto, at non numquam cumque, voluptate ipsum! Quae.                </p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit totam alias dolor accusamus culpa nobis, dicta consequatur iste. 
+                    <br>
+                    <br>
+                    Corrupti doloremque iure perspiciatis molestias repellendus quasi quae nesciunt eum non aut recusandae asperiores vel rem ipsa. Repellendus porro ad id unde deleniti rerum iusto, at non numquam cumque, voluptate ipsum! Quae.                
+                </p>
                 <a href="#" id="booking_button_osk">
                     <p>Boka här</p>
                 </a>
