--- a/galleri.html
+++ b/galleri.html
@@ -31,7 +31,7 @@
 
         <div id="fotografer_och_bilder">
             
-                <img src="img/harmano_2.jpg" alt="En fin bild på Härmanö" id="static_img1">
+                <img src="img/IMG-20220305-WA0003.jpg" alt="En fin bild på Härmanö" id="static_img1">
     
             <div id="fotografer">   
                 <h2>Fotografer</h2>
@@ -58,13 +58,13 @@
             </div>
         </div>
         <div id="static_img2_parent">
-            <img src="img/harmano_2.jpg" alt="En till fin bild på Härmanö" id="static_image2" >
+            <img src="img/webb_img2.jpg" alt="En till fin bild på Härmanö" id="static_image2" >
         </div>
 
 
         <div id="slideshow_container">
             <img src="img/harmano_2.jpg" alt="Första bilden i bildspelet" class="slideshow">
-            <img src="img/IMG-20220305-WA0000.jpg" alt="Första bilden i bildspelet" class="slideshow">
+            <img src="img/bildspel1.jpg" alt="Första bilden i bildspelet" class="slideshow">
         </div>
 
     </div>
