--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </div>
         </nav>
         <div id="img-parent">
-            <img src="img/IMG-20220305-WA0000.jpg" alt="Bild på Härmanö" id="image_start">
+            <img src="img/start_img.jpg" alt="Bild på Härmanö" id="image_start">
         </div>
         
         <article id="article_start">
