--- a/index_att_gora.html
+++ b/index_att_gora.html
@@ -30,7 +30,7 @@
 
         <div id="activities">
             <a href="#" id="vandra_pa_harm">
-                <img src="img/harmano_2.jpg" alt="Bild på vandring" id="bild_pa_vandring">
+                <img src="img/galleri_img1.jpg" alt="Bild på vandring" id="bild_pa_vandring">
                 <div id="vandra_pa_harm_text">
                     <h2>Vandra på Härmanö</h2>
                     <p>Njut av natursköna leder</p>
@@ -38,7 +38,7 @@
             </a>
 
             <a href="#" id="upptack">
-                <img src="img/harmano_2.jpg" alt="Bild på museum" id="bild_pa_museum">
+                <img src="img/mr-cup-fabien-barral-Fo5dTm6ID1Y-unsplash.jpg" alt="Bild på museum" id="bild_pa_museum">
                 <div id="upptack_pa_harm_text">
                     <h2>Upptäck</h2>
                     <p>Härmanös spännande historia</p>
@@ -46,7 +46,7 @@
             </a>
 
             <a href="#" id="besok_gullh">
-                <img src="img/harmano_2.jpg" alt="Bild på Gullholmen" id="bild_pa_gullh">
+                <img src="img/gullholmen.jpg" alt="Bild på Gullholmen" id="bild_pa_gullh">
                 <div id="besok_gullh_text">
                     <h2>Besök Gullholmen</h2>
                     <p>Sveriges charmigaste holme</p>
@@ -59,7 +59,7 @@
 
 
     </div>
-    <script src="js/script.js"></script>
+    <script src="js/script_att_gora"></script>
     
 </body>
 </html>
