--- a/index_boende.html
+++ b/index_boende.html
@@ -34,7 +34,7 @@
             <h2 id="rubrik_harm">
                 Bo på Härmanövägen
             </h2>
-            <img src="img/IMG-20220305-WA0000.jpg" alt="Bild på Härmanövägen" id="bild_pa_harmanovagen">
+            <img src="img/img_harm.jpg" alt="Bild på Härmanövägen" id="bild_pa_harmanovagen">
             <div id="art_harm">
                 <p id="desc_harm">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit totam alias dolor accusamus culpa nobis, dicta consequatur iste. 
@@ -50,7 +50,7 @@
             <h2 id="rubrik_osk">
                 Bo på Oskargatan
             </h2>
-            <img src="img/IMG-20220305-WA0000.jpg" alt="Bild på Härmanövägen" id="bild_pa_oskargatan">
+            <img src="img/img_osk.jpg" alt="Bild på Oskargatan" id="bild_pa_oskargatan">
             
             <div id="art_oskar">
                 <p id="desc_osk">   
