--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
     <div id="grid_wrapper">
         <header id="rubrik">
+            <img src="img/Logga-webb.png" alt="Sidans logga" id="logga">
             <h1>Välkommen till Härmanö</h1>
             <div id="linje"></div>
         </header>
