--- a/index_boende.html
+++ b/index_boende.html
@@ -10,6 +10,7 @@
 <body>
     <div id="grid_wrapper_boende">
         <header id="rubrik">
+            <img src="img/Logga-webb.png" alt="Sidans logga" id="logga">
             <h1>Bo på Härmanö</h1>
         </header>
 
