--- a/index_att_gora.html
+++ b/index_att_gora.html
@@ -10,6 +10,7 @@
 <body>
     <div id="grid_wrapper_att_gora">    
         <header id="rubrik">
+            <img src="img/Logga-webb.png" alt="Sidans logga" id="logga">
             <h1>Att göra</h1>
         </header>
 
