--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </header>
         <nav>
 
-            <ul id="nav-links" > <!---style-koden är kopierad från internet--->
+            <ul id="nav-links" > 
                 <li><a href="index.html">Hem</a></li>
                 <li><a href="index_boende.html">Boende</a></li>
                 <li><a href="index_att_gora.html">Att göra</a></li>
