--- a/galleri.html
+++ b/galleri.html
@@ -10,7 +10,7 @@
 <body>
     <div id="grid_wrapper_galleri">    
         <header id="rubrik">
-            <img src="img/Logga-webb.png" alt="Sidans logga" id="logga">
+            <img src="img/webb-logga-2-v1.png" alt="Sidans logga" id="logga">
             <h1>Galleri</h1>
         </header>
 
