--- a/att_gora.html
+++ b/att_gora.html
@@ -17,8 +17,8 @@
         <nav>
             <ul id="nav-links" > 
                 <li><a href="index.html">Hem</a></li>
-                <li><a href="index_boende.html">Boende</a></li>
-                <li><a href="index_att_gora.html">Att göra</a></li>
+                <li><a href="boende.html">Boende</a></li>
+                <li><a href="att_gora.html">Att göra</a></li>
                 <li><a href="galleri.html">Galleri</a></li>
             </ul>
 
