Ändrade de flesta taggar till lite mer semantiska

--- a/boende.html
+++ b/boende.html
@@ -31,7 +31,7 @@
         </nav>
 
 
-        <div id="Harmanovagen">
+        <section id="Harmanovagen">
             <h2 id="rubrik_harm">
                 Bo på Härmanövägen
             </h2>
@@ -45,7 +45,7 @@
                 </p>
                 <a href="#" id="booking_button_harm">Boka här</a>
             </div>
-        </div>
+        </section>
 
         <div id="oskargatan">
             <h2 id="rubrik_osk">
