--- a/galleri.html
+++ b/galleri.html
@@ -30,11 +30,11 @@
             </div>
         </nav>
 
-        <div id="fotografer_och_bilder">
+        <section id="fotografer_och_bilder">
             
                 <img src="img/IMG-20220305-WA0003.jpg" alt="En fin bild på Härmanö" id="static_img1">
     
-            <div id="fotografer">   
+            <article id="fotografer">   
                 <h2>Fotografer</h2>
                 <ul>
                     <li>
@@ -56,11 +56,11 @@
                         <p> Inte Gustav</p>
                     </li>
                 </ul>
-            </div>
-        </div>
-        <div id="static_img2_parent">
+            </article>
+        </section>
+        <figure id="static_img2_parent">
             <img src="img/webb_img2.jpg" alt="En till fin bild på Härmanö" id="static_image2" >
-        </div>
+        </figure>
 
 
         <div id="slideshow_container">
