--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
                 </div>
             </div>
         </nav>
-        <div id="img-parent">
+        <figure id="img-parent">
             <img src="img/start_img.jpg" alt="Bild på Härmanö" id="image_start">
-        </div>
+        </figure>
         
         <article id="article_start">
                 <h2>
