--- a/att_gora.html
+++ b/att_gora.html
@@ -29,7 +29,7 @@
             </div>
         </nav>
 
-        <div id="activities">
+        <section id="activities">
             <a href="#" id="vandra_pa_harm">
                 <img src="img/galleri_img1.jpg" alt="Bild på vandring" id="bild_pa_vandring">
                 <div id="vandra_pa_harm_text">
@@ -40,23 +40,23 @@
 
             <a href="#" id="upptack">
                 <img src="img/mr-cup-fabien-barral-Fo5dTm6ID1Y-unsplash.jpg" alt="Bild på museum" id="bild_pa_museum">
-                <div id="upptack_pa_harm_text">
+                <article id="upptack_pa_harm_text">
                     <h2>Upptäck</h2>
                     <p>Härmanös spännande historia</p>
-                </div> 
+                </article> 
             </a>
 
             <a href="#" id="besok_gullh">
                 <img src="img/gullholmen.jpg" alt="Bild på Gullholmen" id="bild_pa_gullh">
-                <div id="besok_gullh_text">
+                <article id="besok_gullh_text">
                     <h2>Besök Gullholmen</h2>
                     <p>Sveriges charmigaste holme</p>
-                </div> 
+                </article> 
             </a>
 
 
 
-        </div>
+        </section>
 
 
     </div>
