--- a/boende.html
+++ b/boende.html
@@ -38,10 +38,10 @@
             <img src="img/img_harm.jpg" alt="Bild på Härmanövägen" id="bild_pa_harmanovagen">
             <div id="art_harm">
                 <p id="desc_harm">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit totam alias dolor accusamus culpa nobis, dicta consequatur iste. 
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus, facilis?                    
                     <br>
                     <br>
-                    Corrupti doloremque iure perspiciatis molestias repellendus quasi quae nesciunt eum non aut recusandae asperiores vel rem ipsa. Repellendus porro ad id unde deleniti rerum iusto, at non numquam cumque, voluptate ipsum! Quae.
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis iste minima, natus minus quod necessitatibus adipisci, maxime, ex blanditiis ut dolore aperiam quos eveniet omnis accusantium harum. Quisquam, corporis distinctio.
                 </p>
                 <a href="#" id="booking_button_harm">Boka här</a>
             </div>
