--- a/boende.html
+++ b/boende.html
@@ -38,10 +38,13 @@
             <img src="img/img_harm.jpg" alt="Bild på Härmanövägen" id="bild_pa_harmanovagen">
             <div id="art_harm">
                 <p id="desc_harm">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus, facilis?                    
+                    Bo nära Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus, facilis?                    
                     <br>
                     <br>
                     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis iste minima, natus minus quod necessitatibus adipisci, maxime, ex blanditiis ut dolore aperiam quos eveniet omnis accusantium harum. Quisquam, corporis distinctio.
+                    <br>
+                    <br>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quod illum veniam ab asperiores laudantium maiores eveniet quidem dolorem magnam minima.
                 </p>
                 <a href="#" id="booking_button_harm">Boka här</a>
             </div>
