--- a/att_gora.html
+++ b/att_gora.html
@@ -60,7 +60,7 @@
 
 
     </div>
-    <script src="js/script_att_gora"></script>
+    <script src="js/script_att_gora.js"></script>
     
 </body>
 </html>
